# liveemulation

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  WINDOWS_BUILD.md
.github/workflows/: build.yml
analysis/: CALIBRATION.md  crop_meta.txt  grain_calibration.json  plugin_defaults.json
src/: FilmGrain.cpp  FilmGrain.h  FilmGrainCuda.cu  FilmGrainCuda.h  FilmGrainMetal.mm  GrainCudaCore.cuh  GrainLUT.h  GrainModel.h
tools/: analyze_grain.py  calib_field.cpp  calibrate.py  extract_frames.swift  grain_test.cpp  make_lut.py
